Attempting to fix white space issue below footer. Issue shows up on phone but no chrome dev tools.

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 #root{
   box-sizing: border-box;
-  overflow-x: hidden;
 }
 
 body, html {
