--- a/src/Home.css
+++ b/src/Home.css
@@ -1,5 +1,8 @@
 .home{
+    display: flex;
+    flex-direction: column;
     min-height: 100vh;
+    width: 100vw;
     position: relative;
     color: black;
 }
@@ -11,7 +14,6 @@
     height: 50px;
     width: 100%;
     background: #ffc000;
-    /* background: linear-gradient(90deg, rgba(246,193,1,1) 75%, rgba(236,157,0,1) 85%, rgba(223,141,3,1) 95%, rgba(201,110,18,1) 100%); */
     position: sticky;
     position: -webkit-sticky;
     top: 0px;
@@ -57,6 +59,7 @@
     display: flex;
     flex-direction: column;
     /* min-height: calc(100vh - 100px); */
+    flex: 1;
     padding-bottom: 50px;
 }
 
